# Blueberry

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  fabfile.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tasks.py
.github/workflows/: codeql-analysis.yml
blueberry/: main.py
blueberry/api/: button.py
blueberry/plugins/: cartographie.py
blueberrycore/: main.py
blueberrycore/api/: api_bdd.py
blueberrycore/plugins/: cartographie.py
blueberryui/: main.py
blueberryui/api/: GestionFile.py  Restricted.py  api_bdd.py  button.py  nids_tools.py
blueberryui/plugins/: log.py  nids.py  status.py
blueberryui/plugins/carto/: carto.py
blueberryui/plugins/log/: test_log.py
blueberryui/plugins/logwatch/: logwatch.py
blueberryui/plugins/nids/: __init__.py  nids.py  nids_tools.py
blueberryui/plugins/sysinfo/: __init__.py  sysinfo.py
blueberryui/test/data/: suricata-log.json  suricata-log.temp.json
blueberryui/tests/: test_main.py  test_nids_tools.py  test_sysinfo.py
blueberryui/tests/data/: suricata-log.json
install/: blueberry.service  sendEvent.sh
src/: main.py
src/api/: BDD.py  GestionFile.py  Restricted.py  __init__.py  api_bdd.py  button.py  button_bdd.py  mq_pull.py  network.py  send_alert.py  test_network.py
src/plugins/arpwatch/: ArpWatchError.py  arpwatch.py  arpwatch_tools.py  test_arpwatch.py
src/plugins/carto/: Ip.py  __init__.py  carto.py  carto_conv_modif.py  carto_job.py  carto_tools.py  test_carto.py
src/plugins/log/: log.py  (+1 more)
test/install/: config.test
tests/install/: config.test
(+28 files in other folders)
